--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,16 @@
-<header class="container">
-  <h1 class="u-pull-left">{{ site.title }}</h1>
-  foo
-</header>
-<nav class="navbar">
-  <div class="container">
-    <ul class="navbar-list" role="navigation">
-      <li class="navbar-item"><a href="#">Home</a></li>
-      <li class="navbar-item"><a href="#">Introduction</a></li>
-    </ul>
-  </div>
-</nav>
+<div id="header">
+  <header>
+    <div class="container">
+      <h1>{{ site.title }}</h1>
+      <nav id="nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Downloads</a></li>
+          <li><a href="#">Screenshots</a></li>
+          <li><a href="#">Bug reports</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+</div>
