--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -1,30 +1,70 @@
-#header {
-  height: 60px;
-  header {
-    background: white;
-    z-index: 2;
-    position: fixed;
-    width: 100%;
+@media (min-width: 1000px) {
+  #header {
     height: 60px;
-    line-height: 60px;
-   
-    h1 {
-      position: absolute;
-      top: 0;
-      left: 0;
+    margin-bottom: 20px;
+
+    header {
+      z-index: 2;
+      position: fixed;
+      width: 100%;
+      height: 60px;
+      line-height: 50px;
+      background: white;
+      border-bottom: 1px solid #eee;
+
+      h1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+  }
+  #nav {
+    border: none !important;
+    padding: 0;
+    position: absolute;
+    right: 0;
+
+    ul {
+      padding: 0;
+      margin: 0;
+      li {
+        padding: 0;
+      }
     }
   }
 }
+
+@media (min-width: 650px) {
+  #nav {
+    padding: 10px 0 10px 0;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+
+    ul {
+      margin-left: -10px;
+      li {
+        float: left;
+      }
+    }
+  }
+}
+
 #nav {
-  position: absolute;
-  right: 0;
   ul {
     li {
       list-style: none;
-      float: left;
+
       a {
         display: block;
         padding: 0 10px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: black;
+      }
+
+      a:hover {
+        color: #0FA0CE;
       }
     }
   }
