screenshots page with lightbox support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,8 @@
 
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   <link rel="stylesheet" href="{{ "/assets/style.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/lightbox2/css/lightbox.min.css" | prepend: site.baseurl }}">
 </head>
