--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,6 @@
 
   <link rel="stylesheet" href="{{ "/assets/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/lightbox2/css/lightbox.min.css" | prepend: site.baseurl }}">
+
+  <link rel="alternate" type="application/rss+xml" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
 </head>
