--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,6 @@
   <link rel="stylesheet" href="{{ "/assets/lightbox2/css/lightbox.min.css" | prepend: site.baseurl }}">
 
   <link rel="alternate" type="application/rss+xml" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
+
+  <link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.ico" | prepend: site.baseurl }}">
 </head>
