--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <div id="header">
   <header>
     <div class="container">
+      <div class="site-logo"><i></i></div>
       <h1>{{ site.title }}</h1>
       <nav id="nav">
         <ul>
