--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -37,6 +37,7 @@
 
 @media (min-width: 650px) {
   #nav {
+    clear: both;
     padding: 10px 0 10px 0;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
