--- a/_sass/other.scss
+++ b/_sass/other.scss
@@ -1,3 +1,12 @@
 abbr[title] {
   text-decoration: dotted;
 }
+
+ul {
+  list-style: circle;
+  padding-left: 20px;
+
+  p {
+    margin-bottom: 1rem;
+  }
+}
