keywords meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <title>{{ site.title }}{% if page.title != "" %} - {{ page.title }}{% endif %}</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
+  <meta name="keywords" content="UML .FRI,umlfri,DSM,UML">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
